--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    font-family: monospace, sans-serif,Arial, Helvetica, sans-serif;
+    background-color: black;
+    color: rosybrown;
+    text-align: center;
+    margin-left:0px;
+    margin-right:0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+ol{
+    padding-left: 0px;
 }
+
+body {
+    padding: 30px;
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 3px solid #ccc;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+  }
+  
+  input[type=text]:focus {
+    border: 3px solid #555;
+  }
+/* 
+input{
+    width: 100%;
+    font-size: large;
+} */
+
+.card-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
+.card {
+    align-content: center;
+    border: 1px solid grey;
+    border-radius: 16px;
+    margin-bottom: 10px;
+    align-items: center;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.card p {
+    color: darksalmon;
+    text-align: center;
+}
+
+.card img {
+    max-height: 300px;
+}
+
+:root {
+    --animate-delay: 0.5s;
+  }
